Fixed #133 (#134)
Co-authored-by: Victor N. Skurikhin <VSkurikhin@GMail.Com>